k8s/overlays/dev/replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: deliver-eats
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: deliver-eats
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: deliver-eats
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
  namespace: deliver-eats
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-service
  namespace: deliver-eats
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: deliver-eats
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: deliver-eats
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convert-service
  namespace: deliver-eats
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: deliver-eats
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: deliver-eats
spec:
  replicas: 1
